@@ -12,7 +12,13 @@
     <h2 style="text-align: center">AddSynth</h2>
     <img src="images/global.png" alt="addsynth global window" class="image">
     <p>
-    AddSynth is the most complex and feature filled engine, so is split up into various context levels. The image shows your entry point with all the global controls. Much of this actually consists of standardised inserts that are used across all engines. Detailed descriptions of these are provided in the following sections.
+    AddSynth is the most complex and feature filled engine, so is split up into various context levels. Although based on well-known additive synthesis, Yoshimi extends that considerably.
+    <br><br>
+    There are 8 voices that can all interact with each other to some degree. Each of those voices has a waveform oscillator and optionally a modulation one with five different modulation types. It also has Unison capability - effectively sub-voices.
+    <br><br>
+    The oscillators themselves have a wide range of waveform shaping controls, almost all of which can be changed in real time.
+    <br><br>
+    The image shows your entry point with all the global controls. Much of this actually consists of standardised inserts that are used across all engines. Detailed descriptions of these are provided in the following sections.
     </p>
     <a href="../volume/volume.html">Volume and Panning</a>
     <br>
