@@ -12,7 +12,9 @@
     <h2 style="text-align: center">SubSynth</h2>
     <img src="images/sub.png" alt="SubSynth Window" class="image">
     <p>
-    SubSynth is the simplest engine from the point view of the number of controls. It is a single view of (in essence) a broadband noise generator with a series of <em>harmonics</em> filters that only allow comparatively narrow bands through to the output. There are also the following standardised inserts. Most of these are initially disabled.
+    SubSynth uses the idea of subtractive synthesis in a slightly unusual form. Instead of starting with a spectrum and taking out what you don't want, it is a broadband noise generator with a series of <em>harmonics</em> filters that only allow comparatively narrow bands that you do want through to the output.
+    <br><br>
+     It is the simplest of Yoshimi's engine from the point view of the number of controls almost all of which are real-time. There are also the following standardised inserts. Most of these are initially disabled.
     </p>
     <a href="../volume/volume.html">Volume and Panning</a>
     <br>
