@@ -12,7 +12,7 @@
     <h2 style="text-align: center">Add/Pad Waveforms</h2>
     <img src="images/wave.png" alt="Waveform window" class="image">
     <p>
-    This waveform editor is used for both AddSynth and PadSynth. There are quite a lot of controls that are highly specialised. Unfortunately, we inherited very little documentation for these.
+    This waveform editor is used for both AddSynth and PadSynth. There are quite a lot of controls that are highly specialised. Unfortunately, it is difficult to describe their operation without deep understanding of the mathematics involved.
     </p>
     <p>
     At the top there are a pair of graphic views. On the left is the complete oscillator with all filters and harmonic effects applied, and on the right the basic wave it is derived from.
